<resources>

    <string name="app_name">Pizza7000</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="pizza">Pizza!!!</string>

</resources>