<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/bottom_home"
    android:title="@string/home"
    android:icon="@drawable/baseline_home_24"
    />
    <item
        android:id="@+id/bottom_map"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/map"/>

    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/bottom_share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"/>

    <item
        android:id="@+id/bottom_about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about_us"/>
</menu>